--- a/api/package.json
+++ b/api/package.json
@@ -3,22 +3,28 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
-
+    "start": "nodemon --experimental-specifier-resolution=node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.31.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
+    "csrf": "^3.1.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.2"
+    "mongoos": "^0.0.1-security",
+    "mongoose": "^8.0.4",
+    "mongosh": "^0.0.1"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
